update: Add projects and dependecies

--- a/src/Yup.Soporte.Api/Yup.Soporte.Api.csproj
+++ b/src/Yup.Soporte.Api/Yup.Soporte.Api.csproj
@@ -15,7 +15,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Yup.BulkProcess.Contracts\Yup.BulkProcess.Contracts.csproj" />
     <ProjectReference Include="..\Yup.Enumerados\Yup.Enumerados.csproj" />
+    <ProjectReference Include="..\Yup.Soporte.Domain\Yup.Soporte.Domain.csproj" />
   </ItemGroup>
 
 </Project>
