--- a/src/Yup.Soporte.Api/appsettings.Development.json
+++ b/src/Yup.Soporte.Api/appsettings.Development.json
@@ -4,5 +4,20 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "PathServerFile": {
+    "Carga": {
+      "Archivo": "D:\\\\carga\\Archivo\\"
+    }
+  },
+  "MongoDBSettings": {
+    "ConnectionString": "mongodb://usr_dev:usr_dev@localhost:27017/db_carga"
+  },
+  "CargaMasivaSettings": {
+    "CantidadMaximaRegistros": 10000,
+    "ExtensionesArchivoPermitidas": [ ".xlsx" ],
+    "TamanoMaximoDeArchivoEnMB": 5,
+    "FilaInicialLecturaExcel": 2,
+    "VisualizacionCantidadMinimaRegistros": 10
   }
 }
