feat: Configure Yup.Student.BulkProcess

--- a/src/Yup.Student.BulkProcess/appsettings.Development.json
+++ b/src/Yup.Student.BulkProcess/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "MongoDBSettings": {
+    "ConnectionString": "mongodb://usr_dev:usr_dev@localhost:27017/db_carga"
   }
 }
