--- a/src/Yup.Student.BulkProcess/Yup.Student.BulkProcess.csproj
+++ b/src/Yup.Student.BulkProcess/Yup.Student.BulkProcess.csproj
@@ -13,4 +13,9 @@
     <PackageReference Include="Yup.Core" Version="1.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Yup.BulkProcess\Yup.BulkProcess.csproj" />
+    <ProjectReference Include="..\Yup.Soporte.Infrastructure\Yup.Soporte.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
