--- a/src/Yup.BulkProcess/Yup.BulkProcess.csproj
+++ b/src/Yup.BulkProcess/Yup.BulkProcess.csproj
@@ -8,6 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
+    <PackageReference Include="StackExchange.Redis.Extensions.Core" Version="7.2.1" />
+    <PackageReference Include="StackExchange.Redis.Extensions.Newtonsoft" Version="7.2.1" />
+    <PackageReference Include="StackExchange.Redis.Extensions.Utf8Json" Version="7.2.1" /> 
   </ItemGroup>
 
   <ItemGroup>
