feat: SeguimientoProcesoBloqueService implementation

--- a/src/Yup.Student.BulkProcess/appsettings.Development.json
+++ b/src/Yup.Student.BulkProcess/appsettings.Development.json
@@ -7,5 +7,19 @@
   },
   "MongoDBSettings": {
     "ConnectionString": "mongodb://usr_dev:usr_dev@localhost:27017/db_carga"
+  },
+  "Redis": {
+    "Password": "JnQ2EUGfxkZAhD5WAevSN96S38j5vF2hCSwgpCSR",
+    "AllowAdmin": true,
+    "Ssl": false,
+    "ConnectTimeout": 6000,
+    "ConnectRetry": 2,
+    "Database": 1,
+    "Hosts": [
+      {
+        "Host": "localhost",
+        "Port": "6379"
+      }
+    ]
   }
 }
