feat: Setting for each TipoCarga

--- a/src/Yup.Soporte.Api/appsettings.Development.json
+++ b/src/Yup.Soporte.Api/appsettings.Development.json
@@ -18,6 +18,11 @@
     "ExtensionesArchivoPermitidas": [ ".xlsx" ],
     "TamanoMaximoDeArchivoEnMB": 5,
     "FilaInicialLecturaExcel": 2,
-    "VisualizacionCantidadMinimaRegistros": 10
+    "VisualizacionCantidadMinimaRegistros": 10,
+    "SettingsPorTipoCarga": {
+      "STUDENTS": {
+        "ProcesarPorBloque": true
+      }
+    }
   }
 }
